rate-review/k8s/postgres/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data
              name: myvolumepostgres
      volumes:
        - name: myvolumepostgres
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      restartPolicy: Always
