rate-review/k8s/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  selector:
    service: postgres
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
