rate-review/k8s/postgres/rate-review-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-review
  labels:
    app: rate-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-review
  template:
    metadata:
      labels:
        app: rate-review
    spec:
      containers:
        - name: rate-review
          image: longtran020299/rate-review:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: rate-review
spec:
  selector:
    app: rate-review
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
